objects/Employee_Study_Time__c.object
<CustomObject>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAvailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCanceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCanceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Time</label>
        <referenceTo>Studio_Calender__c</referenceTo>
        <relationshipLabel>Employee Study Time</relationshipLabel>
        <relationshipName>Employee_Study_Time</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>